--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li id="exit" class="exit-btn hide-desktop"> <img src="image/exit.svg" alt=""></li>
                 <li><a href="#nav">home</a></li>
                 <li><a href="#blue">service</a></li>
-                <li><a href="#gray">about</a></li>
+                <li><a href="#gray">About</a></li>
                 <li><a href="#footer">contact</a></li>
  
             </ul>
